ui/src/app/shared/components/image-list/image-list.component.scss
@import 'extends';
@import 'variables';

:host {
  @extend %flex-fill-overflow;
  flex-direction: column;

  .placeholder {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 80px;
  }

  .add-tags-form {
    display: flex;
    flex-wrap: wrap;
    column-gap: 16px;
    margin-bottom: 16px;

    .tags-input {
      flex-grow: 1;
      min-width: 320px;
    }

    .rest-form {
      display: flex;
      margin-top: 8px;
      column-gap: 8px;
    }
  }

  .images-list {
    display: flex;
    flex-grow: 1;
    column-gap: 8px;
    overflow: auto;

    .column {
      display: flex;
      flex-grow: 1;
      width: 1px;
      flex-direction: column;
      row-gap: 8px;

      .image-container {
        position: relative;
        width: 100%;

        .image-thumbnail {
          width: 100%;
        }

        .selection-checkbox {
          position: absolute;
          top: 0;
          left: 0;
          background-color: rgba($background-color-rgb, 0.3);
          border-radius: 5px 0 16px 0;
          display: none;

          &.show {
            display: initial;
          }
        }

        &:hover .selection-checkbox {
          display: initial;
        }
      }
    }
  }

  .auto-scroll {
    position: absolute;
    bottom: 0;
    right: 16px;

    .auto-scroll-speed {
      display: none;
      margin-right: 16px;
      width: 160px;
    }

    .auto-scroll-button {
      opacity: 0.5;
    }

    &:hover {
      background-color: rgba($background-color-rgb, 0.3);
      border-radius: 30px;

      .auto-scroll-speed {
        display: inline-block;
      }

      .auto-scroll-button {
        opacity: initial;
      }
    }
  }
}

